--- a/gb/24/5/20/n14254013.md
+++ b/gb/24/5/20/n14254013.md
@@ -5,55 +5,57 @@
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2024/05/id14254017-Luke2-600x400.jpg" />
 <h6>来自澳洲塔斯马尼亚的摄影师卢克?查克在5月11日凌晨3点起床，并赶至他非常熟悉的一处僻静又美丽的海滩，捕捉到了极为罕见的极光美景。（Luke Tscharke提供）</h6>
 <hr>
-	<p>【大纪元2024年05月20日讯】（英文大纪元记者<ahref="https://www.theepochtimes.com/bright/aurora-chaser-in-tasmania-wakes-at-3am-to-see-largest-southern-lights-in-20-years-gets-photos-5648854">Michael Wing</a>报导／张雨霏编译））5月10日晚至11日凌晨，受超强地磁暴影响，全球多地都出现了二十多年来罕见的极光现象。世界各地的许多摄影师和极光爱好者纷纷拿起专业相机记录下这难得一见的天文奇观，来自澳洲塔斯马尼亚的职业摄影师卢克?查克（Luke Tscharke）也不例外。</p>
+	<p>【大纪元2024年05月20日讯】（英文大纪元记者<ahref="https://www.theepochtimes.com/bright/aurora-chaser-in-tasmania-wakes-at-3am-to-see-largest-southern-lights-in-20-years-gets-photos-5648854" rel="nofollow noopener noreferrer">Michael Wing</a>报导／张雨霏编译））5月10日晚至11日凌晨，受超强地磁暴影响，全球多地都出现了二十多年来罕见的极光现象。世界各地的许多摄影师和极光爱好者纷纷拿起专业相机记录下这难得一见的天文奇观，来自澳洲塔斯马尼亚的职业摄影师卢克?查克（Luke Tscharke）也不例外。</p>
 <p>42岁的查克多年来一直在用镜头捕捉美丽的南极光，他非常了解南极光，也知道哪里是最佳的拍摄地点。他长期依靠美国国家海洋和大气管理局（NOAA）和澳大利亚气象局发布的报告来追踪可能引发极光现象的太阳风暴。</p>
-<figure id="attachment_14254015" aria-describedby="caption-attachment-14254015" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2024/05/id14254015-Luke1.jpg"><img decoding="async" class=" wp-image-14254015" src="https://i.epochtimes.com/assets/uploads/2024/05/id14254015-Luke1.jpg" alt="" width="600" b="400" /></a><figcaption id="caption-attachment-14254015" class="wp-caption-text">5月11日清晨，澳洲塔斯马尼亚上空出现了难得一见的南极光奇景。<ahref="https://luketscharke.com/">Luke Tscharke</a>提供）</figcaption></figure>
+<figure id="attachment_14254015" aria-describedby="caption-attachment-14254015" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2024/05/id14254015-Luke1.jpg" rel="nofollow"><img decoding="async" class=" wp-image-14254015" src="https://i.epochtimes.com/assets/uploads/2024/05/id14254015-Luke1.jpg" alt="" width="600" b="400"></a><figcaption id="caption-attachment-14254015" class="wp-caption-text">5月11日清晨，澳洲塔斯马尼亚上空出现了难得一见的南极光奇景。<ahref="https://luketscharke.com/" rel="nofollow noopener noreferrer">Luke Tscharke</a>提供）</figcaption></figure>
 <p>极光是太阳风和地球磁场相互作用的结果。今年5月上旬以来，多个强烈的太阳耀斑和日冕物质抛射（CME）向地球喷发了大量带电粒子和等离子体，最终导致地球磁场爆发了特大地磁暴，同时也给我们地球带来了一场超大规模的“极光盛宴”。</p>
 <p>通常极光发生在靠近南北极的高纬度地区，但此次超强的太阳风暴导致全球多地的低纬度地区也出现了壮丽的极光。</p>
 <p>5月11日凌晨3点钟，查克的手机应用程序传来了一条具有历史意义的消息：他所居住的地区出现了G5级“极端”地磁暴。这是自2003年10月以来，NOAA首次发布最高级别的地磁暴警报。</p>
-<figure id="attachment_14254018" aria-describedby="caption-attachment-14254018" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2024/05/id14254018-Luke3.jpg"><img decoding="async" class=" wp-image-14254018" src="https://i.epochtimes.com/assets/uploads/2024/05/id14254018-Luke3.jpg" alt="" width="600" b="400" /></a><figcaption id="caption-attachment-14254018" class="wp-caption-text">5月11日清晨，塔斯马尼亚州霍巴特附近的海滩上空出现了多种颜色交织在一起的美丽极光。<ahref="https://luketscharke.com/">Luke Tscharke</a>提供）</figcaption></figure>
+<figure id="attachment_14254018" aria-describedby="caption-attachment-14254018" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2024/05/id14254018-Luke3.jpg" rel="nofollow"><img decoding="async" class=" wp-image-14254018" src="https://i.epochtimes.com/assets/uploads/2024/05/id14254018-Luke3.jpg" alt="" width="600" b="400"></a><figcaption id="caption-attachment-14254018" class="wp-caption-text">5月11日清晨，塔斯马尼亚州霍巴特附近的海滩上空出现了多种颜色交织在一起的美丽极光。<ahref="https://luketscharke.com/" rel="nofollow noopener noreferrer">Luke Tscharke</a>提供）</figcaption></figure>
 <p>作为一名专业的极光摄影师，查克非常清楚，他必须在正确的时间出现在正确的地点。因此他看到消息后不敢怠慢一刻，马上从床上爬起来赶至他非常熟悉的一处僻静又美丽的海滩，从而捕捉到了极为罕见的极光美景，这些照片很快在全球广为流传。</p>
 <p>“半夜三更你没有太多时间去想事情”，他告诉《大纪元时报》，“幸运的是，我有一个可以直接前往的地方，所以不必花时间思考。”</p>
 <p>这位屡获殊荣（曾荣获《澳大利亚地理》杂志授予的“2023年度自然摄影师”称号）的摄影师经常去的海滩位于塔斯马尼亚州首府霍巴特（Hobart）附近，但他没有透露这个海滩的具体名称，因为担心“很多人”会涌过来。</p>
-<figure id="attachment_14254017" aria-describedby="caption-attachment-14254017" style="width: 601px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2024/05/id14254017-Luke2.jpg"><img decoding="async" class=" wp-image-14254017" src="https://i.epochtimes.com/assets/uploads/2024/05/id14254017-Luke2.jpg" alt="" width="601" b="401" /></a><figcaption id="caption-attachment-14254017" class="wp-caption-text">在如此罕见的天文奇观面前，这位摄影师决定把自己融入到画面中。<ahref="https://luketscharke.com/">Luke Tscharke</a>提供）</figcaption></figure>
+<figure id="attachment_14254017" aria-describedby="caption-attachment-14254017" style="width: 601px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2024/05/id14254017-Luke2.jpg" rel="nofollow"><img decoding="async" class=" wp-image-14254017" src="https://i.epochtimes.com/assets/uploads/2024/05/id14254017-Luke2.jpg" alt="" width="601" b="401"></a><figcaption id="caption-attachment-14254017" class="wp-caption-text">在如此罕见的天文奇观面前，这位摄影师决定把自己融入到画面中。<ahref="https://luketscharke.com/" rel="nofollow noopener noreferrer">Luke Tscharke</a>提供）</figcaption></figure>
 <p>“在塔斯马尼亚州，你真正需要做的就是找到一个海滩或一个可以看到南面天空的地方”，他说，“这次极光的规模空前巨大，比以往报导过的任何极光事件的范围要大得多。”</p>
 <p>值得一提的是，在如此罕见的天文奇观面前，这位摄影师决定把自己融入到画面中。</p>
 <p>查克于当日的早上5:30开始拍摄。他说，粉色、红色和绿色与较深的蓝色和紫色光束交织在一起，以一种“难以用语言描述”的方式在天空中翩翩起舞，将整个夜空渲染得十分梦幻。</p>
-<figure id="attachment_14254016" aria-describedby="caption-attachment-14254016" style="width: 601px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2024/05/id14254016-Luke4.jpg"><img decoding="async" class=" wp-image-14254016" src="https://i.epochtimes.com/assets/uploads/2024/05/id14254016-Luke4.jpg" alt="" width="601" b="401" /></a><figcaption id="caption-attachment-14254016" class="wp-caption-text">彩色丝带状光柱在水面上翩翩起舞。<ahref="https://luketscharke.com/">Luke Tscharke</a>提供）</figcaption></figure>
+<figure id="attachment_14254016" aria-describedby="caption-attachment-14254016" style="width: 601px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2024/05/id14254016-Luke4.jpg" rel="nofollow"><img decoding="async" class=" wp-image-14254016" src="https://i.epochtimes.com/assets/uploads/2024/05/id14254016-Luke4.jpg" alt="" width="601" b="401"></a><figcaption id="caption-attachment-14254016" class="wp-caption-text">彩色丝带状光柱在水面上翩翩起舞。<ahref="https://luketscharke.com/" rel="nofollow noopener noreferrer">Luke Tscharke</a>提供）</figcaption></figure>
 <p>虽然近期网络上流传着许多绚丽的极光照片，但很少有像他拍的照片那样令人震撼，就连澳大利亚气象局都引用分享了他的作品。</p>
 <p>“我刚刚查了一下”，他告诉本报记者，“这些照片已经吸引2,300万人观看，它们已经传遍了世界各地。”</p>
 <p>“我拍摄照片并分享它们的目的是与大家分享我所看到的大自然的美景和奇迹”，他说，“这对我来说真的很有意义，因为这意味着人们会了解这个世界是多么的美丽。”</p>
-<p>查克在霍巴特经营他的<ahref="https://luketscharke.com/">摄影生意</a>，他还教授摄影课程并提供旅拍服务。◇</p>
-<figure id="attachment_14254019" aria-describedby="caption-attachment-14254019" style="width: 601px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2024/05/id14254019-Luke6.jpg"><img decoding="async" class=" wp-image-14254019" src="https://i.epochtimes.com/assets/uploads/2024/05/id14254019-Luke6.jpg" alt="" width="601" b="401" /></a><figcaption id="caption-attachment-14254019" class="wp-caption-text">在如此罕见的天文奇观面前，这位摄影师决定把自己融入到画面中。<ahref="https://luketscharke.com/">Luke Tscharke</a>提供）</figcaption></figure>
-<p>责任编辑：韩玉#</p>
-<div id="gtx-anchor" style="position: absolute; visibility: hidden; left: 10px; top: 729.2px; width: 55.2125px; height: 17.6px;"></div>
+<p>查克在霍巴特经营他的<ahref="https://luketscharke.com/" rel="nofollow noopener noreferrer">摄影生意</a>，他还教授摄影课程并提供旅拍服务。◇</p>
+<figure id="attachment_14254019" aria-describedby="caption-attachment-14254019" style="width: 601px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2024/05/id14254019-Luke6.jpg" rel="nofollow"><img decoding="async" class=" wp-image-14254019" src="https://i.epochtimes.com/assets/uploads/2024/05/id14254019-Luke6.jpg" alt="" width="601" b="401"></a><figcaption id="caption-attachment-14254019" class="wp-caption-text">在如此罕见的天文奇观面前，这位摄影师决定把自己融入到画面中。<ahref="https://luketscharke.com/" rel="nofollow noopener noreferrer">Luke Tscharke</a>提供）</figcaption></figure>
+<p>责任编辑：韩玉#
+</p>
+<div id="gtx-anchor" style="position: absolute;left: 10px;top: 729.2px;width: 55.2125px;height: 17.6px"></div>
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/8/15/n14574025.md#1">川普与普京会面前 五大焦点值得关注</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/8/15/n14574382.md#1">希拉里：若俄乌终战 提名川普拿诺贝尔和平奖</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/8/15/n14574415.md#1">克里姆林宫：预计双普会晤时长6至7小时</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/8/15/n14574571.md#1">组图：川普阿拉斯加笑迎普京</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/4/13/n14481653.md#1">湖北维权人士案件庭审 莫名被增加两项罪名</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/14/n14531122.md#1">要求调查办假案法官 访民被抓 亲属遭株连</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/8/31/n14584722.md#1">湖北访民夫妻被以虚构罪名判入狱 生命垂危</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/22/n14621384.md#1">湖北访民尹登珍狱中病情恶化 家属吁紧急救援</a></li>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank">人心向善 大陆当初盛况</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/1/25/n11000879.md#1" target="_blank">共产暴政录：文革中究竟死了多少人</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/8/1/n11424700.md#1" target="_blank">罗兰：中共公安何以成公害</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank">加拿大总理的贺信</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/11/3/n10828040.md#1" target="_blank">大饥荒是中共有计划的屠杀手段（中）</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/14/4/12/n4130061.md#1" target="_blank">正清：法轮功没有“男女双修”</a></li>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/18/8/23/n10659446.md#1">节气“处暑”是什么意思？ 处暑出伏中元添福！</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/15/12/10/n4592934.md#1">潜龙隐迹辽东郡 名士风流厉冰雪</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/8/23/n14579766.md#1">【未解之谜】考古还是盗墓？开挖皇陵 诡异事件频现</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/8/8/n14569774.md#1">【古道人生】女子忍辱负重为夫家保后代</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/8/21/n14578146.md#1">一片叶落，是风的无情或树的无心还是叶子本身的无意?</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/8/25/n14580914.md#1">【新闻大破解】俄乌和谈五方博弈 联动台海</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/22/4/5/n13697943.md#1">【神韵原创音乐】2019 神韵交响乐《传神》</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/8/23/n14579508.md#1">亿万富翁不把钱存储蓄账户 他们放在哪里</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/8/23/n14579820.md#1">波音空客潜在订单泄漏商飞C919何种困境</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/8/23/n14579804.md#1">在Costco买这六种商品 为何你或感到后悔</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/8/22/n14579291.md#1">成本超3000万 郭富城主演新片首日票房仅5万</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/8/23/n14579822.md#1">杨洋凭武打戏再翻红 自曝严重腿伤需终生复健</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/8/23/n14579431.md#1">犬青被评论“颜值忽高忽低” 云安急召歌迷喊话</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/8/23/n14579795.md#1">【漂流传奇】李尚正：从星爷配角到台柱主持</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/8/23/n14579837.md#1">遗书爆陆综平台分帐黑幕 28岁导演轻生未遂</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/8/24/n14579978.md#1">为什么有些衣服洗了会缩水？ 如何挽救？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/19/n14555466.md#1">【梁厨美食】清蒸大红石斑～蒸鱼技巧学起来！</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/8/25/n14580580.md#1">为何你度假时应该把一枚硬币放在冰箱里？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/8/11/n14571447.md#1">劝年长者放弃开车? 劝说要有技巧</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/8/20/n14577575.md#1">生前赠与：提早帮助继承人 避免财产纠纷 实现双赢</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/5/n14649620.md#1">幸福不是你能左右多少人，而是多少人愿意在你的左右</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/2/n14647568.md#1">执子之手 不离不弃 一对美国夫妻的爱情传奇</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/4/n14648578.md#1">大雪节气寒冬里 如何掌握养生要则与禁忌？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/30/n14645924.md#1">王九龄的《题旅店》：半梦半醒思乡国</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/17/n14637529.md#1">【古道人生】书生在饥荒中救一富家女成大富</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/9/n14652088.md#1">【直播】众议院民主党领袖杰弗里斯举行记者会</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/9/n14652090.md#1">【十字路口】防疫或布疫？深夜无人机洒怪液</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/9/n14651956.md#1">【直播】听证会：保护儿童免受网络犯罪分子侵害</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/6/n14650041.md#1">分析：北京“稀土武器”效力正快速下降</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/7/n14650517.md#1">相声演员郭德纲表演《艺高人胆小》遭约谈</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/7/n14650551.md#1">日军机遭中共歼-15雷达照射 高市早苗回应</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/6/n14650176.md#1">为捧儿子向佐亏数亿 向华强：上天给我的教训</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/8/n14651351.md#1">迪丽热巴疑遭替身取代宣传新戏 视频吓坏网友</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/7/n14650354.md#1">Netflix若收购华纳兄弟 将拥有9个系列影视</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/7/n14650211.md#1">《阿凡达3》香港撤档 片名后缀因敏感字遭删</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/6/n14650198.md#1">港星黄日华宣布退圈 告别45年演艺生涯</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/7/n14650330.md#1">为什么飞机客舱的窗户是圆形的？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/9/n14651688.md#1">如何预防车窗起雾？让Toyota告诉你</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/9/n14651622.md#1">为何在天气寒冷时会手脚冰冷？如何改善？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/8/n14650995.md#1">不小心让强力胶沾到物体表面 如何清除？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/8/n14650878.md#1">研究：说话时善用手势可以增加说服力</a></li>
 <strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/24/5/20/n14254013.htm">组图：澳摄影师凌晨3点起床 拍到绝美极光</a></p><hr>
 <strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://quickchart.io/qr?size=256&text=https://github.com/1992513/djy/blob/master/gb/24/5/20/n14254013.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
